--- a/AWD-jquery-practice/practice toggle.html
+++ b/AWD-jquery-practice/practice toggle.html
@@ -12,10 +12,9 @@ $(document).ready(function(){
 </head>
 <body>
 
-<button>Toggle</button>
+<p>This is a paragraph.</p>
 
-<p>content</p>
-<p>no content</p>
+<button>Toggle between hide() and show()</button>
 
 </body>
 </html>
